# xorg__lib__libXlg3d

./: COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  xlg3d.pc  xlg3d.pc.in
CVS/: Entries  Repository
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
include/CVS/: Repository
include/X11/CVS/: Repository
include/X11/extensions/: Xlge.h
include/X11/extensions/CVS/: Entries  Repository
src/: Makefile  Makefile.am  Makefile.in  Xlge.c  Xlge.c~  Xlge.lo  libXlg3d.la
src/.deps/: Xlge.Plo
src/.libs/: libXlg3d  libXlg3d.1.0.0  libXlg3d.la  libXlg3d.lai  libXlg3d.so.1.0.0
src/CVS/: Entries  Repository
